# event_viz

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  README.md  devcontainer.json
docs/: ERROR_HANDLING_API.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  logging.rs  main.rs  tests.rs
src-tauri/src/commands/: data_source.rs  mod.rs
src-tauri/src/data_source/: types.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  EventsDashboard.tsx
src/components/DataSourceManager/: index.tsx
src/components/Layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/hooks/: useErrorHandler.test.tsx  useErrorHandler.ts  useEvents.ts
src/services/: eventService.ts
src/styles/: dashboard.css  layout.css
src/test/: setup.ts
src/types/: events.ts
src/types/dataSources/: index.ts
src/utils/: errorHandler.test.ts  errorHandler.ts  ipcErrorHandler.test.ts  ipcErrorHandler.ts
